responsive background white space fix

--- a/css/main.css
+++ b/css/main.css
@@ -9,19 +9,32 @@ body, html {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-  min-width: 100%;
-  min-height: 100% ;
+  width: 100%;
+  height: 100%;
+  height: 100vh;
+  width: 100vw;
   overlow: hidden;
+}
+
+.gradient-wrapper{
+  position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    padding:0;
+    margin:0;
+    overflow: auto;
 }
 
 .jumbotron {
   position: absolute;
   z-index: 10;
   padding: 0 0;
-  margin: 0 0;
+  margin: auto auto;
   overflow: hidden;
   text-align: center;
-  display: flex;
+  display: block;
   align-items: center;
   color: white;
   height: 100%;
@@ -74,10 +87,17 @@ header h3 {
 }
 
 #contact-nav {
+  padding-top: 10px;
+  padding-right: 0;
+  height: 40px;
   width: 100%;
   font-size: 15px;
-  margin-top: -45px;
   opacity: 0;
+}
+
+#contact-nav nav {
+  padding: 0 0;
+  display: block;
 }
 
 #about-nav {
@@ -87,8 +107,10 @@ header h3 {
 }
 
 #about-title {
+  font-family: lato, roboto, sans-serif;
   text-align: left;
   font-size: 35px;
+  color: white;
   -webkit-text-shadow: 0.25px 0.25px 0.25px black;
   text-shadow: 0.25px 0.25px 0.25px black;
   filter: drop-shadow(1px 1px 0.5px rgba(0,0,0,0.5));
@@ -103,19 +125,21 @@ header h3 {
 }
 
 #about-title span {
-opacity: 0;
-  }
+  opacity: 0;
+}
 
 #about-title-wrap {
   padding: 0 0px;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0;
-  max-height: 550px;
+  height: 100%;
   width: 40%;
   float: left;
   z-index: 200;
+  background-color: black;
 }
+
 
 #img-div-wrapper {
   position: absolute;
@@ -185,6 +209,9 @@ opacity: 0;
 
 #contact-footer {
   opacity: 0;
+  display: block;
+  position: absolute;
+  bottom: 0;
 }
 
 nav {
@@ -209,7 +236,7 @@ float: right;
   overflow: hidden;
 }*/
 
-.jumbotron {
+/*.jumbotron {
   text-align: center;
   display: flex;
   align-items: center;
@@ -219,7 +246,7 @@ float: right;
   background: black;
   z-index: 1000;
   /*position: relative;*/
-}
+}*/
 
 #about-jumbotron {
   background: black;
@@ -400,10 +427,13 @@ footer div {
   transform: scale(1.1);
 }
 
-#contact-top {
+/*#contact-top {
+  position: absolute;
+  margin: auto auto;
   width: 100%;
-  padding-top: 12%;
-}
+  height: 50%;
+
+}*/
 
 .col-md-6 {
   margin: 0 0 30px;
@@ -452,22 +482,22 @@ footer div {
 }
 
 .project-figure.one {
-  animation: fadeIn 1.5s ease-in-out 4.5s;
+  animation: fadeIn 1.5s ease-in-out 0.2s;
   animation-fill-mode: forwards;
 }
 
 .project-figure.two {
-  animation: fadeIn 1.5s ease-in-out 4.7s;
+  animation: fadeIn 1.5s ease-in-out 0.4s;
   animation-fill-mode: forwards;
 }
 
 .project-figure.three {
-  animation: fadeIn 1.5s ease-in-out 4.9s;
+  animation: fadeIn 1.5s ease-in-out 0.6s;
   animation-fill-mode: forwards;
 }
 
 .project-figure.four {
-  animation: fadeIn 1.5s ease-in-out 5.1s;
+  animation: fadeIn 1.5s ease-in-out 0.8s;
   animation-fill-mode: forwards;
 }
 
@@ -519,29 +549,33 @@ footer div {
 }
 
 #contact-text {
-  max-width: 900px;
-  text-align: justify;
-  margin: auto;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto auto;
+  width: 90%;
+  height: 100px;
   font-family: lato, roboto, sans-serif;
   font-weight: 300;
   font-size: 1.7em;
   width: 90%;
-  padding: 200px 0% 200px 0%;
-  font-family: lato;
 }
 
 #contact-text p a {
   transition: .2s ease-in-out;
 }
 
-#contact {
+/*#contact {
  height: 100% !important;
  width: 100%;
  background-color: rgba(215, 215, 215, 1);
  box-shadow: 0px -1px 20px #8d8d8d;
  padding-bottom: 80%;
  font-family: lato;
-}
+}*/
 
 #skill-btn {
   transform: rotate(270deg);
@@ -571,6 +605,8 @@ footer div {
 /*skills*/
 
 .skl {
+  font-family: lato, roboto, sans-serif;
+  color: white;
   display: inline-block;
   position: relative;
   width: 100px;
@@ -597,7 +633,7 @@ footer div {
   position: absolute;
   right: 0;
   left: 0;
-  top: 0;
+  top: 5%;
   bottom: 0;
   margin: auto;
   max-width: 230px;
@@ -612,13 +648,13 @@ footer div {
     display: none;
 }
 
-#contact a {
+#contact-text a {
   color: white;
   text-decoration: none;
   text-shadow: 0.25px 0.25px 0.25px #000000;
 }
 
-#contact a:hover {
+#contact-text a:hover {
   text-shadow: 0.25px 0.25px 0.25px #000000;
   text-decoration: none;
   color: #337ab7;
@@ -1126,6 +1162,7 @@ button.sun-rise:hover {
 }
 @media screen and (max-width: 815px) and (max-height: 1000px) {
  #about-title {
+
    font-size: 25px;
  }
  .project-figure {
